# cbcbeat

./: .buildinfo  .bumpversion.cfg  .hgtags  .pre-commit-config.yaml  AUTHORS  Dockerfile  INSTALL  README.md  README.rst  bitbucket-pipelines.yml  cbcbeat.cellmodels.html  cbcbeat.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.circleci/: config.yml
.github/workflows/: github-pages.yml  main.yml  pypi.yml
_modules/: index.html
_modules/cbcbeat/: bidomainsolver.html  cardiacmodels.html  cellsolver.html  markerwisefield.html  monodomainsolver.html  splittingsolver.html  utils.html
_modules/ufl_legacy/: argument.html  cell.html  coefficient.html  constant.html  constantvalue.html  domain.html  form.html  formoperators.html  functionspace.html  geometry.html  integral.html  log.html  measure.html  operators.html  split_functions.html  tensors.html
_sources/: cbcbeat.cellmodels.rst.txt  cbcbeat.rst  index.rst  modules.rst
cbcbeat/: __init__.py  bidomainsolver.py  cardiacmodels.py  cellsolver.py  coupledbidomainsolver.py  coupledsplittingsolver.py  dolfinimport.py  gossplittingsolver.py  gotran2cellmodel.py  gotran2dolfin.py  markerwisefield.py  monodomainsolver.py  splittingsolver.py  torsomodels.py  utils.py
cbcbeat/cellmodels/: README  __init__.py  beeler_reuter_1977.ode  beeler_reuter_1977.py  cardiaccellmodel.py  fenton_karma_1998_BR_altered.ode  fenton_karma_1998_BR_altered.py  fenton_karma_1998_MLR1_altered.ode  fenton_karma_1998_MLR1_altered.py  fitzhughnagumo.ode  fitzhughnagumo.py  fitzhughnagumo_manual.py  grandi_pasqualini_bers_2010.ode  grandi_pasqualini_bers_2010.py  maleckar_2009.ode  nocellmodel.py  rogers_mcculloch_manual.py  simple_model.ode  tentusscher_2004_mcell.py  tentusscher_2004_mcell_cont.ode  tentusscher_2004_mcell_cont.py  tentusscher_2004_mcell_disc.ode  tentusscher_2004_mcell_disc.py  tentusscher_panfilov_2006_M_cell.ode  tentusscher_panfilov_2006_M_cell.py  tentusscher_panfilov_2006_epi_cell.ode  tentusscher_panfilov_2006_epi_cell.py
demo/: README.rst
demo/bidomain-biventricular/: README  demo_biventricular.py  preprocess_conductivities.py  (+1 more)
doc/: Makefile  conf.py  index.rst  make.bat
docker/: Dockerfile  INSTALL  WELCOME
joss/: paper.md  references.bib
sandbox/: README  test_adjoint_pointintegralsolver.py
scripts/: README  generate-doc  generate-full-doc  gotran2beat  gotran2dolfin
test/: README  conftest.py  pytest.ini
(+76 files in other folders)
